--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install Dependencies
-        run: |
-          pip install mkdocs-material
+        run: pip install -r requirements.txt
 
       - name: Build and Deploy
         run: |
